--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -126,6 +126,32 @@ body
               font-size: 22px
               color: #2196f3
 
+  .modal
+    width: 100vw
+    height: 100vh
+    position: fixed
+    justify-content: center
+    align-items: center
+    background-color: rgba(225, 225, 225, .5)
+    display: none
+    &_content
+      width: 640px
+      height: 200px
+      padding: 20px 30px
+      background-color: #fff
+      &-wrapper
+        display: flex
+        justify-content: flex-end
+        margin-top: 20px
+      &-btn
+        font-size: 20px
+        background-color: #fff
+        border: 2px solid #666
+        padding: 10px 20px
+      .btn-left
+        margin-right: 10px
 
+    &-show
+      display: flex
 
 
